--- a/05.md
+++ b/05.md
@@ -5,7 +5,7 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
-    server-->>browser: HTML document (SPA shell)
+    server-->>browser: HTML document 
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
@@ -15,7 +15,7 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
     activate server
-    server-->>browser: the JavaScript file (SPA logic)
+    server-->>browser: the JavaScript file 
     deactivate server
 
     Note right of browser: The browser loads the SPA and executes the JavaScript code.
